Remove usage of illegal-access=permit
Co-Authored-By: Martin Junghanns <martin.junghanns@neotechnology.com>
Co-Authored-By: Paul Horn <paul.horn@neotechnology.com>